Add JSF elements ids for Selenium test

--- a/nuxeo-platform-virtualnavigation/nuxeo-platform-virtualnavigation-web/src/main/resources/web/nuxeo.war/incl/breadcrumb_vn.xhtml
+++ b/nuxeo-platform-virtualnavigation/nuxeo-platform-virtualnavigation-web/src/main/resources/web/nuxeo.war/incl/breadcrumb_vn.xhtml
@@ -18,9 +18,9 @@
   </div>
 
   <div class="breadcrumbs">
-    <h:form>
+    <h:form id="breadcrumbForm">
 
-      <h:commandLink action="#{breadcrumbActions.navigateToParent}"
+      <h:commandLink id="goToParentButton" action="#{breadcrumbActions.navigateToParent}"
         rendered="#{facesContext.viewRoot.viewId != '/view_servers.xhtml'}">
         <nxu:graphicImage value="/icons/UpFolder_icon.gif"
           style="vertical-align:middle"/>
