NXP-7791: Add a single document suggestion + clean up + documentation + sub tab management on multiple doc suggestion

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/multiple_document_suggestion_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/multiple_document_suggestion_widget_template.xhtml
@@ -23,7 +23,8 @@
               <h:outputText value="#{doc.dublincore.title}" />
               <nxd:restDocumentLink document="#{doc}"
                 newConversation="true" target="_blank"
-                tab="#{widgetProperty_tab}">
+                tab="#{widgetProperty_tab}"
+                subTab="#{widgetProperty_subTab}">
                 <nxu:graphicImage value="/icons/external.gif"
                   style="vertical-align:middle"
                   alt="#{messages['permalink.newTab']}"
@@ -126,7 +127,8 @@
                         <h:outputText value="#{doc.dublincore.title}" />
                         <nxd:restDocumentLink document="#{doc}"
                           newConversation="true" target="_blank"
-                          tab="#{widgetProperty_tab}">
+                          tab="#{widgetProperty_tab}"
+                          subTab="#{widgetProperty_subTab}">
                           <nxu:graphicImage value="/icons/external.gif"
                             style="vertical-align:middle"
                             alt="#{messages['permalink.newTab']}"
