NXP-7836: Add missing button class on actions

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectRemote.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectRemote.xhtml
@@ -23,7 +23,7 @@
                     itemLabel="#{messages[itype.label]}" />
                 </h:selectOneListbox>
                   <div style="display: none;">
-                <a4j:commandButton value="submit"  reRender="connectAppListing" />
+                <a4j:commandButton value="submit"  reRender="connectAppListing" styleClass="button" />
             </div>
     </h:form>
     <h:form>
@@ -33,7 +33,7 @@
 
                 </h:selectBooleanCheckbox> <h:outputText value="#{messages['label.appcenter.show.new.packages']}"/>
                   <div style="display: none;">
-                <a4j:commandButton value="submit"  reRender="connectAppListing" />
+                <a4j:commandButton value="submit"  reRender="connectAppListing" styleClass="button" />
             </div>
     </h:form>
     <h:form>
@@ -43,11 +43,11 @@
 
                 </h:selectBooleanCheckbox> <h:outputText value="#{messages['label.appcenter.platform.filter']}"/>
                   <div style="display: none;">
-                <a4j:commandButton value="submit"  reRender="connectAppListing" />
+                <a4j:commandButton value="submit"  reRender="connectAppListing" styleClass="button" />
             </div>
     </h:form>
     <h:form>
-           <a4j:commandButton value="#{messages['admCommand.refresh']}" actionListener="#{appsViews.flushCache()}"  reRender="connectAppListing" />
+           <a4j:commandButton value="#{messages['admCommand.refresh']}" actionListener="#{appsViews.flushCache()}"  reRender="connectAppListing" styleClass="button"/>
     </h:form>
 
   </div>
