--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectUpdates.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectUpdates.xhtml
@@ -19,7 +19,7 @@
                     itemLabel="#{messages[itype.label]}" />
                 </h:selectOneListbox>
                   <div style="display: none;">
-                <a4j:commandButton value="submit" reRender="connectAppListing"/>
+                <a4j:commandButton value="submit" reRender="connectAppListing" styleClass="button"/>
             </div>
     </h:form>
         <h:form>
@@ -29,11 +29,11 @@
 
                 </h:selectBooleanCheckbox> <h:outputText value="#{messages['label.appcenter.platform.filter']}"/>
                   <div style="display: none;">
-                <a4j:commandButton value="submit"  reRender="connectAppListing" />
+                <a4j:commandButton value="submit"  reRender="connectAppListing" styleClass="button" />
             </div>
     </h:form>
     <h:form>
-           <a4j:commandButton value="#{messages['admCommand.refresh']}" actionListener="#{appsViews.flushCache()}"  reRender="connectAppListing" />
+           <a4j:commandButton value="#{messages['admCommand.refresh']}" actionListener="#{appsViews.flushCache()}"  reRender="connectAppListing" styleClass="button" />
     </h:form>
 
   </div>
