--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectLocal.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectLocal.xhtml
@@ -29,9 +29,9 @@
                     itemLabel="#{messages[itype.label]}" />
                 </h:selectOneListbox>
                   <div style="display: none;">
-                <a4j:commandButton value="submit" reRender="connectAppListing"/>
+                <a4j:commandButton value="submit" reRender="connectAppListing" styleClass="button"/>
             </div>
-    <input type="button" value="#{messages['label.upload.package']}" onclick="jQuery('#uploadForm').css('display','block');"/>
+    <input type="button" value="#{messages['label.upload.package']}" onclick="jQuery('#uploadForm').css('display','block');" class="button" />
     </h:form>
   </div>
 
