NXP-7836: Clean CSS, add missing classes

--- a/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/web/nuxeo.war/incl/monitoring/adminProbes.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/web/nuxeo.war/incl/monitoring/adminProbes.xhtml
@@ -10,8 +10,7 @@
 
 <a4j:outputPanel id="probesTable">
 
- <h:dataTable var="probe" value="#{monitoringAction.getProbeInfos()}" class="dataOutput"
-    rowClasses="dataRowEven,dataRowOdd">
+ <h:dataTable var="probe" value="#{monitoringAction.getProbeInfos()}" class="dataOutput">
     <h:column>
       <f:facet name="header"><h:outputText value="#{messages['label.monitoring.probe.label']}" />
       </f:facet>
@@ -79,7 +78,7 @@
       <f:facet name="header"><h:outputText value="#{messages['label.monitoring.probe.action']}" />
       </f:facet>
       <h:form>
-        <a4j:commandLink  action="#{monitoringAction.runProbe()}" reRender="probesTable">
+        <a4j:commandLink  action="#{monitoringAction.runProbe()}" reRender="probesTable" styleClass="button">
         <h:outputText value="#{messages['action.monitoring.runProbe']}" />
             <f:param name="probeName" value="#{probe.shortcutName}" />
          </a4j:commandLink>
