--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy.xhtml
@@ -6,7 +6,7 @@
 <div class="siteLogo">
   <h:form>
     <h:commandLink action="#{navigationContext.goHome()}">
-      <h:graphicImage value="/img/theme_galaxy/nuxeo_5.2_logo.png" alt="Nuxeo DM" width="116" height="36" />
+      <h:graphicImage value="/img/nuxeo_logo.png" alt="Nuxeo" width="92" height="36" />
     </h:commandLink>
   </h:form>
 </div>
