NXP-7824: fix CSV export when using filtered content (export URL was not re-rendered so content view state held by it was not up to date)

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_search_layout.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_search_layout.xhtml
@@ -33,7 +33,7 @@ Needed parameters:
               id="#{contentViewRenderId}_resetFilterSubmit"
               ajaxSingle="true"
               rendered="#{nxd:isDirty(contentView.searchDocumentModel)}"
-              reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm"
+              reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm, #{contentViewRenderId}_contentViewActionsPanel"
               oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
               styleClass="button warningLink">
               <nxu:actionListenerMethod
@@ -53,7 +53,7 @@ Needed parameters:
           <a4j:commandButton
             value="#{messages['label.contentview.filter.filterAction']}"
             id="#{contentViewRenderId}_filterSubmit"
-            reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm"
+            reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm, #{contentViewRenderId}_contentViewActionsPanel"
             oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
             styleClass="button">
             <nxu:actionListenerMethod
@@ -63,7 +63,7 @@ Needed parameters:
             value="#{messages['label.contentview.filter.clearFilterButton']}"
             id="#{contentViewRenderId}_filterClear"
             immediate="true" ajaxSingle="true"
-            reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm"
+            reRender="#{contentViewRenderId}_resultsPanel, #{contentViewRenderId}_resetFilterForm, #{contentViewRenderId}_filterForm, #{contentViewRenderId}_contentViewActionsPanel"
             oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
             styleClass="button">
             <nxu:actionListenerMethod
