NXP-7837: add missing class on table in thread creation

--- a/nuxeo-platform-forum/nuxeo-platform-forum/src/main/resources/web/nuxeo.war/thread_create.xhtml
+++ b/nuxeo-platform-forum/nuxeo-platform-forum/src/main/resources/web/nuxeo.war/thread_create.xhtml
@@ -18,7 +18,7 @@
     </h3>
     <ui:include src="/incl/message_banner.xhtml" />
     <h:form enctype="multipart/form-data" id="createThread">
-     <table>
+     <table class="dataInput">
        <tr>
          <td class="labelColumn required"><h:outputText value="#{messages['label.forum.thread.titre']}" /></td>
           <td>
