NXP-7676: Migrate local theme feature to handle flavours instead of theme pages

--- a/nuxeo-platform-localconfiguration/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/incl/tabs/theme_configuration.xhtml
+++ b/nuxeo-platform-localconfiguration/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/incl/tabs/theme_configuration.xhtml
@@ -3,7 +3,7 @@
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
   id="themeConfigurationView">
 
-  <nxl:layout name="theme_configuration" mode="edit"
-        value="#{currentDocument}"/>
+  <nxl:layout name="#{themeConfigurationActions.configurationLayout}"
+    mode="edit" value="#{currentDocument}"/>
 
 </f:subview>
