--- a/nuxeo-platform-localconfiguration/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/theme_selection_widget_template.xhtml
+++ b/nuxeo-platform-localconfiguration/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/widgets/theme_selection_widget_template.xhtml
@@ -1,7 +1,11 @@
 <f:subview xmlns:f="http://java.sun.com/jsf/core"
   xmlns:h="http://java.sun.com/jsf/html"
   xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
+  xmlns:c="http://java.sun.com/jstl/core"
   id="#{widget.id}">
+<c:if test="false">
+  Deprecated since 5.5: use flavor selection instead
+</c:if>
 
   <a4j:region renderRegionOnly="true">
 
