--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy.xhtml
@@ -6,7 +6,25 @@
 <div class="siteLogo">
   <h:form>
     <h:commandLink action="#{navigationContext.goHome()}">
-      <h:graphicImage value="/img/nuxeo_logo.png" alt="Nuxeo" width="92" height="36" />
+      <nxu:set var="flavorLogo" value="#{themeActions.logo}"
+        cache="true">
+        <c:if test="#{empty flavorLogo}">
+          <h:graphicImage
+            value="/img/nuxeo_logo.png"
+            alt="Nuxeo"
+            title="Nuxeo"
+            width="92"
+            height="36" />
+        </c:if>
+        <c:if test="#{not empty flavorLogo}">
+          <h:graphicImage
+            value="#{flavorLogo.path}"
+            alt="#{flavorLogo.title}"
+            title="#{flavorLogo.title}"
+            width="#{flavorLogo.width}"
+            height="#{flavorLogo.height}" />
+        </c:if>
+      </nxu:set>        
     </h:commandLink>
   </h:form>
 </div>
