NXP-7908: use a time zone for the field converter

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/usersSessions.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/usersSessions.xhtml
@@ -89,7 +89,7 @@
         </f:facet>
         <h:outputText value="#{row.lastAccessDate}">
           <f:convertDateTime type="both" dateStyle="medium"
-            timeStyle="medium" />
+            timeStyle="medium" timeZone="#{timeZone}" />
         </h:outputText>
       </nxu:column>
     </nxu:dataTable>
