NXP-7908: use a time zone for the field converter

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/usersActivity.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/usersActivity.xhtml
@@ -46,7 +46,7 @@
           <h:outputText value="#{messages['label.event.date']}"/>
         </f:facet>
         <h:outputText value="#{row.eventDate}">
-            <f:convertDateTime type="both" dateStyle="medium" timeStyle="medium"/>
+            <f:convertDateTime type="both" dateStyle="medium" timeStyle="medium" timeZone="#{timeZone}" />
         </h:outputText>
       </nxu:column>
 
